<resources>
    <string name="app_name">Tarea_Plantilla</string>
    <string name="title_username">Nombre de Usuario:</string>
    <string name="title_password">Contraseña:</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="button_sign_in">Iniciar sesión</string>
    <string name="button_sign_in_with">Sign in with</string>
    <string name="button_sign_up">Regístrate</string>
</resources>
