<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plantilla">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:src="@drawable/logo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/inputs_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_username"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/inputs_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_password"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:imeOptions="actionNone"
                    android:text="@string/remember_me"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black" />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:text="@string/button_sign_in"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/button_sign_in_with"
                    android:textColor="@color/black" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/button_sign_in_with"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="22dp"
            android:background="@drawable/button_background"
            android:text="@string/button_sign_up"
            android:textColor="@color/black" />
    </LinearLayout>
</RelativeLayout>